--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,8 @@ before_install:
   - sudo apt-get install libgdal-dev
   - sudo apt-get install python-gdal
 
+python:
+  - "2.7"
+  - "3.4"
+
 script: pytest
